--- a/trying.tex
+++ b/trying.tex
@@ -49,5 +49,21 @@
 \indent \faMobile \hspace{5pt}\textbf{7504609374} \\
 \indent \faMobilePhone$_2$ \hspace{5pt}\textbf{9938990245} \\
 
+%Career Objectives
+\renewcommand{\labelitemi}{\includegraphics[height=4ex]{jnj.JPG}}
+\begin{itemize}
+  \vspace{4ex}
+  \item \textbf{\huge{C}}\textbf{\large areer} \textbf{\huge{O}}\textbf{\large bjectives}
+  {\color{mypink1}
+  \rule{\linewidth}{0.5mm}}
+ \end{itemize}
+ \justify
+To  gain  maximum  knowledge  in  the  field  of  robotics
+,  artificial intelligence
+and 
+develop  an  ability  to  use  the  techniques,  skills  and  modern  engineering  tools  in  engineering 
+practice and to pursue the
+broad education necessary to understand the impact of robotics 
+solutions in a global, economic, environmental and social context. 
 
 \end{document}
