--- a/trying.tex
+++ b/trying.tex
@@ -66,4 +66,36 @@ practice and to pursue the
 broad education necessary to understand the impact of robotics 
 solutions in a global, economic, environmental and social context. 
 
+%Academic Achievments
+\renewcommand{\labelitemi}{\includegraphics[height=4ex]{jnj.JPG}}
+\begin{itemize}
+  \vspace{4ex}
+  \item \textbf{\huge{A}}\textbf{\large cademics} \textbf{\huge{D}}\textbf{\large etails}
+  {\color{mypink1}
+  \rule{10.5cm}{0.5mm}}
+ \end{itemize}
+ 
+\setlength{\tabcolsep}{10pt}
+\renewcommand{\arraystretch}{3.0}
+
+\rowcolors{1}{white}{mypink2}
+
+\begin{tabular}{ p{3.2cm} p{9cm} p{2.6cm}  }
+ 
+ Jun 2014-Continuing & \textbf{Veer Surendra Sai University Of Technology,Burla}
+ 
+\setlength{\tabcolsep}{0pt}
+\renewcommand{\arraystretch}{1.0}\begin{tabular}[x]{@{}c@{}}Electrical and Electronics Engineering\\(Bachelor of Technology), CGPA:8.8/10 (till 
+5th sem.)\end{tabular}
+  & \textbf{Odisha, India}  \\
+
+ Jun 2012 
+–
+May 2014  & \setlength{\tabcolsep}{0pt}
+\renewcommand{\arraystretch}{1.0}\begin{tabular}[x]{@{}c@{}}\textbf{Kendriya Vidyalaya No.1,Bhubaneswar}\\12th (CBSE, New Delhi), Percentage:92.4\end{tabular} & \textbf{Odisha,India}  \\
+
+ May 2012  & \setlength{\tabcolsep}{0pt}
+\renewcommand{\arraystretch}{1.0}\begin{tabular}[x]{@{}c@{}}\textbf{Kendriya Vidyalaya No.1,Bhubaneswar}\\10th (CBSE, New Delhi), CGPA:10/10\end{tabular} & \textbf{Odisha,India}  \\
+\end{tabular}
+
 \end{document}
