--- a/trying.tex
+++ b/trying.tex
@@ -98,4 +98,35 @@ May 2014  & \setlength{\tabcolsep}{0pt}
 \renewcommand{\arraystretch}{1.0}\begin{tabular}[x]{@{}c@{}}\textbf{Kendriya Vidyalaya No.1,Bhubaneswar}\\10th (CBSE, New Delhi), CGPA:10/10\end{tabular} & \textbf{Odisha,India}  \\
 \end{tabular}
 
+%PROJECTS
+\renewcommand{\labelitemi}{\includegraphics[height=4ex]{jnj.JPG}}
+\begin{itemize}
+  \vspace{4ex}
+  \item \textbf{\huge{P}}\textbf{\large rojects}
+  {\color{mypink1}
+  \rule{13.5cm}{0.5mm}}
+ \end{itemize}
+ \renewcommand{\labelitemi}{\textendash}
+ \begin{enumerate}
+     \item Semi-automated Mine Detector operated through Hand Gesture
+     \begin{itemize}
+       \item Automated pick and place (of blocks) mechanism on detection of mines (metal) by principle of mutual inductance. Situation analogues to real life mine field scenario.
+     \end{itemize}
+     
+     \item Remotely operated Stair Climbing cum all terrain robot
+      \begin{itemize}
+       \item Robot operated through Bluetooth used to traverse odd terrains including stairs, uneven surfaces like on stones etc employing \textbf{Rocker-Boggie Mechanism}.
+     \end{itemize}
+     
+     \item Automated Pizza Delivery System Using FIREBIRD-V robot
+     \begin{itemize}
+       \item Real time scheduling of orders,detection of object (color) and their delivery to specified house (coordinate) using \textbf{FIREBIRD-V}
+     \end{itemize}
+     
+     \item Automated Path planner and Object Detector using ROS
+     \begin{itemize}
+       \item Automated path planning and object detection using packages of ROS to identify the objects based on their corresponding ARUCO marker ID.
+     \end{itemize}
+ \end{enumerate}
+ 
 \end{document}
