--- a/trying.tex
+++ b/trying.tex
@@ -128,5 +128,20 @@ May 2014  & \setlength{\tabcolsep}{0pt}
        \item Automated path planning and object detection using packages of ROS to identify the objects based on their corresponding ARUCO marker ID.
      \end{itemize}
  \end{enumerate}
+ %TRAINING AND INTERNSHIPS
+ \renewcommand{\labelitemi}{\includegraphics[height=4ex]{jnj.JPG}}
+\begin{itemize}
+  \vspace{4ex}
+  \item \textbf{\huge{T}}\textbf{\large raining} \textbf{\huge{\&}} \textbf{\huge{I}}\textbf{\large nternship}
+  {\color{mypink1}
+  \rule{10.5cm}{0.5mm}}
+ \end{itemize}
  
+ \renewcommand{\labelitemi}{\textbullet}
+ \begin{itemize}
+   \item Summer Course in CTTC, Bhubaneswar, Odisha on \textbf{INDUSTRIAL AUTOMATION (PLC)}
+   \item Summer Course in CTTC, Bhubaneswar, Odisha on \textbf{ADVANCE JAVA}
+   \item \textbf{Industrial Training} on \textbf{POWER TRANSMISSION AND DISTRIBUTION SYSTEM} at \textbf{OPTCL, Bhubaneswar,Odisha.}  
+ \end{itemize}
+
 \end{document}
