--- a/trying.tex
+++ b/trying.tex
@@ -144,4 +144,16 @@ May 2014  & \setlength{\tabcolsep}{0pt}
    \item \textbf{Industrial Training} on \textbf{POWER TRANSMISSION AND DISTRIBUTION SYSTEM} at \textbf{OPTCL, Bhubaneswar,Odisha.}  
  \end{itemize}
 
+%RESEARCH PUBLICATION
+ \renewcommand{\labelitemi}{\includegraphics[height=4ex]{jnj.JPG}}
+\begin{itemize}
+  \vspace{4ex}
+  \item \textbf{\huge{R}}\textbf{\large ESEARCH} \textbf{\LARGE{\&}} \textbf{\huge{P}}\textbf{\large UBLICATION}
+  {\color{mypink1}
+  \rule{8.5cm}{0.5mm}}
+ \end{itemize}
+ \begin{enumerate}
+     \item Currently Working on Project, Not yet published
+ \end{enumerate}
+ 
 \end{document}
