--- a/trying.tex
+++ b/trying.tex
@@ -156,4 +156,28 @@ May 2014  & \setlength{\tabcolsep}{0pt}
      \item Currently Working on Project, Not yet published
  \end{enumerate}
  
+%TECHNICAL SKILLS
+ \renewcommand{\labelitemi}{\includegraphics[height=4ex]{jnj.JPG}}
+\begin{itemize}
+  \vspace{4ex}
+  \item \textbf{\huge{T}}\textbf{\large ECHNICAL} \textbf{\huge{S}}\textbf{\large KILLS}
+  {\color{mypink1}
+  \rule{10.5cm}{0.5mm}}
+ \end{itemize}
+ 
+ \renewcommand{\labelitemi}{\textbullet}
+ \begin{itemize}
+   \item \textbf{Robot Operating System (ROS)}
+   \item \textbf{ARDUINO}, \textbf{AVR Studio} and \textbf{Eclipse} IDEs.
+   \item \textbf{MATLAB \& SIMULINK} applications
+   \item \textbf{C, C++, JAVA, Python} Programmings
+   \item \textbf{WEB Development Programmings}
+   \begin{itemize}
+     \item \textbf{HTML}
+     \item \textbf{CSS}
+     \item \textbf{AJAX}
+     \item \textbf{PHP}
+   \end{itemize}
+ \end{itemize}
+ 
 \end{document}
