--- a/trying.tex
+++ b/trying.tex
@@ -179,5 +179,20 @@ May 2014  & \setlength{\tabcolsep}{0pt}
      \item \textbf{PHP}
    \end{itemize}
  \end{itemize}
+ %SOFT SKILLS
+ \renewcommand{\labelitemi}{\includegraphics[height=4ex]{jnj.JPG}}
+\begin{itemize}
+  \vspace{4ex}
+  \item \textbf{\huge{S}}\textbf{\large OFT} \textbf{\huge{S}}\textbf{\large KILLS}
+  {\color{mypink1}
+  \rule{12cm}{0.5mm}}
+ \end{itemize}
+ 
+ \renewcommand{\labelitemi}{\textbullet}
+ \begin{itemize}
+   \item Excellent \textbf{Leadership} quality but definitely believe that \textbf{Team Work} can do wonder.
+   \item \textbf{Creative} and an \textbf{Innovative} approach to deal with real life problems.
+   \item \textbf{Dedicated} and \textbf{Determined} in the things I am interested in.
+ \end{itemize}
  
 \end{document}
