--- a/trying.tex
+++ b/trying.tex
@@ -194,5 +194,20 @@ May 2014  & \setlength{\tabcolsep}{0pt}
    \item \textbf{Creative} and an \textbf{Innovative} approach to deal with real life problems.
    \item \textbf{Dedicated} and \textbf{Determined} in the things I am interested in.
  \end{itemize}
+ %Extra-Curricular activities
+ \renewcommand{\labelitemi}{\includegraphics[height=4ex]{jnj.JPG}}
+\begin{itemize}
+  \vspace{4ex}
+  \item \textbf{\huge{E}}\textbf{\large XTRA-} \textbf{\huge{C}}\textbf{\large URRICULAR}
+  \textbf{\huge{A}}\textbf{\large CTIVITIES}
+  {\color{mypink1}
+  \rule{6.5cm}{0.5mm}}
+ \end{itemize}
+ \renewcommand{\labelitemi}{\textbullet}
+\begin{itemize}
+  \item Student Representative
+  \item Sports
+  \item Volunteer experience
+\end{itemize}
  
 \end{document}
