--- a/trying.tex
+++ b/trying.tex
@@ -209,5 +209,21 @@ May 2014  & \setlength{\tabcolsep}{0pt}
   \item Sports
   \item Volunteer experience
 \end{itemize}
- 
+ %Co-Curricular activities
+ \renewcommand{\labelitemi}{\includegraphics[height=4ex]{jnj.JPG}}
+\begin{itemize}
+  \vspace{4ex}
+  \item \textbf{\huge{C}}\textbf{\large O-} \textbf{\huge{C}}\textbf{\large URRICULAR}
+  \textbf{\huge{A}}\textbf{\large CTIVITIES}
+  {\color{mypink1}
+  \rule{7.5cm}{0.5mm}}
+ \end{itemize}
+ \renewcommand{\labelitemi}{\textbullet}
+\begin{enumerate}
+  \item Robotics
+  \item \textbf{Presentation} and \textbf{Documentation}
+  \item Model Preparation
+  \item Group Discussion
+\end{enumerate}
+  
 \end{document}
