--- a/trying.tex
+++ b/trying.tex
@@ -225,5 +225,36 @@ May 2014  & \setlength{\tabcolsep}{0pt}
   \item Model Preparation
   \item Group Discussion
 \end{enumerate}
-  
+   %Personal Details
+ \renewcommand{\labelitemi}{\includegraphics[height=4ex]{jnj.JPG}}
+\begin{itemize}
+  \vspace{4ex}
+  \item \textbf{\huge{P}}\textbf{\large ERSONAL} \textbf{\huge{D}}\textbf{\large ETAILS}
+  {\color{mypink1}
+  \rule{10cm}{0.5mm}}
+ \end{itemize}
+ 
+ \hspace{0.5cm}\\[-0.2cm]
+ \indent \textbf{Father's Name:} Rama Chandra Prusti\\
+ \indent \textbf{Mother's Name:} Kunjalata Prusti\\
+ \indent \textbf{Sex:} Male\\
+ \indent \textbf{Date Of Birth:} 08th April 1997\\
+ \indent \textbf{Nationality:} Indian\\
+ \indent \textbf{Marital Status:} Single\\
+ 
+%Reference
+ \renewcommand{\labelitemi}{\includegraphics[height=4ex]{jnj.JPG}}
+\begin{itemize}
+  \vspace{4ex}
+  \item \textbf{\huge{R}}\textbf{\large EFERENCE}
+  {\color{mypink1}
+  \rule{12cm}{0.5mm}}
+ \end{itemize}
+ \renewcommand{\labelitemi}{\textbullet}
+ \begin{itemize}
+   \item Mr. Lingaraj Dora\\
+   \indent Asst. Professor\\
+   \indent \faMobile \hspace{5pt} 9439864157\\
+   \indent \faEnvelope \hspace{5pt}\texttt{ldora\_eee@vssut.ac.in}
+ \end{itemize}
 \end{document}
