--- a/trying.tex
+++ b/trying.tex
@@ -257,4 +257,9 @@ May 2014  & \setlength{\tabcolsep}{0pt}
    \indent \faMobile \hspace{5pt} 9439864157\\
    \indent \faEnvelope \hspace{5pt}\texttt{ldora\_eee@vssut.ac.in}
  \end{itemize}
+\vspace{1cm}
+ \centering
+ \textbf{\large DECLARATION}
+ \justify
+ \textbf{I hereby declare that the above mentioned statements are true to the best of my knowledge.}\\
 \end{document}
