--- a/trying.tex
+++ b/trying.tex
@@ -262,4 +262,6 @@ May 2014  & \setlength{\tabcolsep}{0pt}
  \textbf{\large DECLARATION}
  \justify
  \textbf{I hereby declare that the above mentioned statements are true to the best of my knowledge.}\\
+\flushleft
+\textbf{Date:}24th April 2017 
 \end{document}
